Implementing error reusability, modal with portal, saving favorites

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Clothes App</title>
   </head>
   <body>
+    <div id="modal"></div>
     <div id="app">not rend.</div>
     <script type="module" src="/src/App.jsx"></script>
   </body>
