--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="modal"></div>
-    <div id="app">not rend.</div>
-    <script type="module" src="/src/App.jsx"></script>
+    <div id="app"></div>
+    <script type="module" src="/src/App.tsx"></script>
   </body>
 </html>
