--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <body>
     <div id="modal"></div>
     <div id="app">not rend.</div>
-    <script type="module" src="/src/ClientApp.jsx"></script>
+    <script type="module" src="/src/App.jsx"></script>
   </body>
 </html>
